--- a/prototypes/ui/assets/css-compiled/main.css
+++ b/prototypes/ui/assets/css-compiled/main.css
@@ -512,7 +512,7 @@ body {
 }
 #topbar nav {
   cursor: pointer;
-  max-height: 1.25rem;
+  max-height: 1.875rem;
   text-align: right;
   overflow: hidden;
   transition: max-height 0.25s ease;
@@ -521,11 +521,8 @@ body {
   transform: translateY(0);
   transition: transform 0.25s ease;
 }
-#topbar nav:hover {
-  max-height: 1.875rem;
-}
 #topbar nav:hover > * {
-  transform: translateY(-1.25rem);
+  transform: translateY(-2.5rem);
 }
 @media (max-width: 700px) {
   #topbar nav {
@@ -538,6 +535,7 @@ body {
 }
 #topbar nav .parent {
   display: inline-block;
+  margin-bottom: 1.25rem;
 }
 #topbar nav > ul {
   padding-left: 25px;
