--- a/prototypes/ui/assets/scss/component/_side.scss
+++ b/prototypes/ui/assets/scss/component/_side.scss
@@ -31,24 +31,41 @@ nav#sideNav{
       order: 2;
       transition: .25s ease-in-out;
       &:first-of-type{
-        opacity: 0;
-        border: $border;
-        padding: 3px;
-        font-size: .75rem;
+        svg{
+          stroke-width : 2px;
+          transition: .5s ease-in-out;
+          position: absolute;
+          top: 5px;
+          left: 0;
+          &:first-of-type{ opacity: 0;}
+          &:last-of-type{ opacity: 1;}
+        }
+        padding: 3px $unite 3px 0;
       }
       label{cursor: pointer;}
     }
     &:hover{
-      li:first-of-type{opacity: .5;}
+      li:first-of-type{
+        svg{
+          &:first-of-type{ opacity: 1;}
+          &:last-of-type{ opacity: 0;}
+        }
+      }
     }
   }
-  @for $i from 1 through 5{
-    input[id$="medium-#{$i}"]:checked ~ .cat-container {
-      //.item[data-medium="#{$i}"]{ opacity: 1; order: 1}
+}
+@for $i from 1 through 5{
+  body#categorie nav#sideNav input[id$="medium-#{$i}"]:checked ~ .cat-container {
+    .item:not([data-medium="#{$i}"]){
+      margin: 0 !important;
+      img{ width: 0 !important; }
+    }
+  }
+  body#piece, body#info{
+    nav#sideNav input[id$="medium-#{$i}"]:checked ~ .cat-container {
       .item:not([data-medium="#{$i}"]){
         margin: 0 !important;
-        height: 0 !important;
-        img{ width: 0 !important; }
+        &, img{ height: 0 !important; }
       }
     }
   }
@@ -69,7 +86,6 @@ body#categorie{
 
     *{user-select: none;}
 
-
     /*
       Sort
             */
@@ -83,7 +99,7 @@ body#categorie{
     .sort-options{
       position: absolute;
       right: $unite;
-      top: 0;
+      top: $baseline*-1;
     }
 
     > ul.cat-container{
@@ -101,13 +117,7 @@ body#categorie{
         display: inline-block;
         padding-right: $unite*4;
         vertical-align: top;
-        label{
-          position: sticky;
-          top: 0;
-          left: 0;
-          margin: $baseline*2 0; 
-
-        }
+        label{ display: none; }
 
         ul.item-container {
           @include flex();
